# kogui-pokedex

./: README.md  docker-compose.yml
api/: .dockerignore  .gitignore  .http  Dockerfile  README.md  config.py  database.py  main.py  pyproject.toml
api/http/: auth.http  pokemon.http
api/models/: pokemon_tipe_model.py  pokemon_usuario_model.py  pokemon_usuario_tipo_model.py  usuario_model.py
api/routes/: auth_routes.py  pokemon_routes.py  user_routes.py
api/services/: auth_service.py  pokeapi_service.py  pokemon_service.py  user_service.py
api/utils/: auth_decorators.py  hash.py  http_status.py
web/: .dockerignore  .eslintignore  .eslintrc.json  .prettierignore  .prettierrc.json  Dockerfile  README.md  angular.json  mime.types  package-lock.json  package.json
web/src/: index.html  styles.css
web/src/app/: app.config.ts  app.routes.ts  app.spec.ts  app.ts
web/src/app/components/button-navigate/: button-navigate.html  button-navigate.spec.ts  button-navigate.ts
web/src/app/components/card-pokemon/: card-pokemon.html  card-pokemon.ts
web/src/app/components/header/: header.html  header.ts
web/src/app/components/type-pokemon-badge/: type-pokemon-badge.html  type-pokemon-badge.spec.ts  type-pokemon-badge.ts
web/src/app/login/: login.html  login.ts
web/src/app/pages/favorite/: favorite.html  favorite.ts
web/src/app/pages/home/: home.html  home.ts
web/src/app/services/: api.ts
web/src/app/types/: api.types.ts  index.ts  pokemon.types.ts  ui.types.ts
web/src/environments/: environment.ts
web/src/utils/: pokemon-type.util.ts
(+13 files in other folders)
